care/force-app/main/default/objects/Event__c/fields/Raffle__c.field-meta.xml
<CustomField>
    <fullName>Raffle__c</fullName>
    <inlineHelpText>Do you want to include a raffle?</inlineHelpText>
    <label>Raffle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>