care/force-app/main/default/objects/Event__c/fields/Senior_Care_Planning__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Senior Care Planning is being provided at this event.</inlineHelpText>
    <label>Senior Care Planning</label>
    <type>Checkbox</type>
</CustomField>