care/force-app/main/default/objects/Event__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <inlineHelpText>Provide shipping address where all event materials will be sent.</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>