care/force-app/main/default/objects/Event__c/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <inlineHelpText>Provide actual shipping cost of materials sent to event.</inlineHelpText>
    <label>Shipping Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>