care/force-app/main/default/objects/Event__c/fields/Shipping_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Recipient_Name__c</fullName>
    <inlineHelpText>Provide full name of person at event receiving all event materials.</inlineHelpText>
    <label>Shipping Recipient Name</label>
    <type>TextArea</type>
</CustomField>