care/force-app/main/default/objects/Event__c/fields/Staffing__c.field-meta.xml
<CustomField>
    <fullName>Staffing__c</fullName>
    <inlineHelpText>Is staffing required for this event?</inlineHelpText>
    <label>Staffing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>