care/force-app/main/default/objects/Event__c/fields/Staffing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Cost__c</fullName>
    <inlineHelpText>Provide actual event staffing cost.</inlineHelpText>
    <label>Staffing Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>