care/force-app/main/default/objects/Event__c/fields/Staffing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Deadline__c</fullName>
    <inlineHelpText>Provide staffing deadline date.</inlineHelpText>
    <label>Staffing Deadline</label>
    <type>Date</type>
</CustomField>