care/force-app/main/default/objects/Event__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Start date of the event.</description>
    <inlineHelpText>Enter the start date of the event.</inlineHelpText>
    <label>Start date</label>
    <type>Date</type>
</CustomField>