care/force-app/main/default/objects/Event__c/fields/Suvey_Email__c.field-meta.xml
<CustomField>
    <fullName>Suvey_Email__c</fullName>
    <description>to send survey from</description>
    <inlineHelpText>Enter emailadress to send survey from</inlineHelpText>
    <label>Suvey Email</label>
    <type>Email</type>
</CustomField>