care/force-app/main/default/objects/Event__c/fields/Swag__c.field-meta.xml
<CustomField>
    <fullName>Swag__c</fullName>
    <inlineHelpText>Do you want to include swag items?</inlineHelpText>
    <label>Swag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>