care/force-app/main/default/objects/Event__c/fields/T_E_Cost__c.field-meta.xml
<CustomField>
    <fullName>T_E_Cost__c</fullName>
    <inlineHelpText>Provide actual Travel and Expenses (T&amp;E) cost for this event.</inlineHelpText>
    <label>T&amp;E Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>