care/force-app/main/default/objects/Event__c/fields/Total_Cost_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Event__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please enter the total amount invoiced to client.</inlineHelpText>
    <label>Total Cost of Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>