care/force-app/main/default/objects/Event__c/fields/Toys_Activities__c.field-meta.xml
<CustomField>
    <fullName>Toys_Activities__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Are toys/activities required for the event ?</inlineHelpText>
    <label>Toys/Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>