care/force-app/main/default/objects/Event__c/fields/Toys_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Toys_Transportation__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Who will provide transportation for toys?</inlineHelpText>
    <label>Toys Transportation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>