care/force-app/main/default/objects/Event__c/fields/Tracking_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Numbers__c</fullName>
    <inlineHelpText>Provide tracking numbers for all materials shipped to the event.</inlineHelpText>
    <label>Tracking Numbers</label>
    <type>TextArea</type>
</CustomField>