care/force-app/main/default/objects/Event__c/fields/Where_Care_Will_Take_Place__c.field-meta.xml
<CustomField>
    <fullName>Where_Care_Will_Take_Place__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide exact location where care will take place at the event.</inlineHelpText>
    <label>Where Care Will Take Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>