care/force-app/main/default/objects/Event__c/recordTypes/CAW_Client_Onsite_Event.recordType-meta.xml
<RecordType>
    <fullName>CAW_Client_Onsite_Event</fullName>
    <active>true</active>
    <description>SFORCE-1936 Benefit fair requests</description>
    <label>CAW Client Onsite Event</label>
</RecordType>