care/force-app/main/default/objects/Event__c/recordTypes/Int_WPS_Service_Event.recordType-meta.xml
<RecordType>
    <fullName>Int_WPS_Service_Event</fullName>
    <active>true</active>
    <label>Int. WPS Service Event</label>
</RecordType>