care/force-app/main/default/objects/Event__c/recordTypes/SCP_Onsite_Group.recordType-meta.xml
<RecordType>
    <fullName>SCP_Onsite_Group</fullName>
    <active>true</active>
    <label>SCP Onsite Group</label>
</RecordType>