care/force-app/main/default/objects/Event__c/recordTypes/US_Event_Care.recordType-meta.xml
<RecordType>
    <fullName>US_Event_Care</fullName>
    <active>true</active>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <label>US Event Care</label>
</RecordType>