care/force-app/main/default/objects/Event__c/validationRules/Business_Account_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Account_Not_Null</fullName>
    <active>true</active>
    <description>SFORCE-2306
C@W benefit fair object improvements - part 1</description>
    <errorConditionFormula>AND($Setup.Override_Validation_Rules__c.Override_WPS_Event_Validation__c = False,
RecordType.Name=&apos;CAW Client Onsite Event&apos;,
TEXT( Event_Status__c ) = &apos;Completed&apos;,
ISBLANK(Business_Account__c)
)</errorConditionFormula>
    <errorDisplayField>Business_Account__c</errorDisplayField>
    <errorMessage>If Event Status is Completed. Business Account should not be Null.</errorMessage>
</ValidationRule>