care/force-app/main/default/objects/Event__c/listViews/Open_Benefit_Fairs_Fullfilment_Details.listView-meta.xml
<ListView>
    <fullName>Open_Benefit_Fairs_Fullfilment_Details</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Contact_Name__c</columns>
    <columns>Materials_Ship_Date__c</columns>
    <columns>Materials_Sent__c</columns>
    <columns>Tracking_Numbers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.CAW_Client_Onsite_Event</value>
    </filters>
    <filters>
        <field>Event_Status__c</field>
        <operation>equals</operation>
        <value>Requested,In Progress</value>
    </filters>
    <label>Open Benefit Fairs- Fullfilment Details</label>
    <language>en_US</language>
    <sharedTo>
        <group>C_W_Marketing</group>
    </sharedTo>
</ListView>